--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -6,8 +6,7 @@ server {
     }
 
     location /Labcom-task {
-        # Handle requests to the /labcom path
         # Example: proxy pass requests to your backend service
-        proxy_pass http://your_backend_service_host:your_backend_service_port;
+        proxy_pass http://commit-backend:5000;
     }
 }
